2007-12-26 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 523: Go around a firmware problem in the iSight (v1.0.3): two
	           vendor leaves are present but there's no model leaf, even
		   though the second 'vendor' leaf is clearly the model leaf.
	
2007-12-17 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 522: Write a very basic, one-line description of (almost) every
	           function.
	* SVN 521: little cleanup in the example programs
	* SVN 520: comments don't end with "\n", so that custom handlers can
	           choose what to do (use "\r", for instance). Instead, the
		   "\n" is added in the default handlers. Some vararg
		   comments have also been also reinstated.

2007-12-16 David Moore  <dcm@acm.org>
	* SVN 519: Convert tabs to spaces and delete trailing whitespace.

2007-12-14 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 518: Change indentation from 2 to 4 spaces 
	* SVN 517: Framework for the Doxygen comments. 
	* SVN 516: Version 2.0.0-rc9

2007-12-13 David Moore  <dcm@acm.org>
	* SVN 515: Add basler_sff_registry.h to dc1394/vendor/Makefile.am

2007-12-13 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 514: Version 2.0.0-rc8
        * SVN 513: Fix redefinition of MIN and MAX macros (Rudolf Leitgeb)

2007-12-12 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 512: -DDC1394_DLL_EXPORTS is MSW only. Also, don't change the
	           CFLAGS but instead use AM_CFLAGS.
	* SVN 511: Split control.h into several header files.
        * SVN 510: merge checksum.c/h into utils.c/h

2007-12-12 David Moore <dcm@acm.org>
	* SVN 509: Removed LIBDC1394_VERSION* from control.h and updated
		   libtool version info in configure.in.
	* SVN 508: Fix isochronous declarations.
	* SVN 507: Remove internal.h include from vendor include files

2007-12-12 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 506: fix dc1394_error_get_string().
        * SVN 505: change bit_depth -> data_depth for coherency.
